--- a/style.css
+++ b/style.css
@@ -41,10 +41,8 @@ body * {
 }
 
 #container {
-    /*
-    border: 1px solid goldenrod;
-    */
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 0px;
     padding: 0 24px;
 }
